UIMA-1459 Fixed inefficient conversion from Integer to String. Removed call to finalize() in the cleanUp() method
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/sandbox/trunk@798145 13f79535-47bb-0310-9956-ffa450edef68